--- a/frontend-server/public/page/home.ejs
+++ b/frontend-server/public/page/home.ejs
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/home.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.bundle.js" integrity="sha256-o8aByMEvaNTcBsw94EfRLbBrJBI+c3mjna/j4LrfyJ8=" crossorigin="anonymous"></script>
+    <!-- Define vars to pass into javascript below... -->
+    <script>
+      var moopData = "<%- locals.moop %>";
+      var progLangData = "<%= locals.languageData %>"
+    </script>
   </head>
   <body>
     <div class="jumbotron vertical-center">
